--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -19,7 +21,7 @@
             android:name=".VocabularyLearningActivity"
             android:exported="false" />
         <activity
-            android:name=".SentencesActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +35,7 @@
             android:label="@string/title_activity_registration"
             android:theme="@style/Theme.LangMaster" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".SentencesActivity"
             android:exported="false" />
     </application>
 
