--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.LangMaster"
         tools:targetApi="31">
         <activity
+            android:name=".VocabularyLearningActivity"
+            android:exported="false" />
+        <activity
             android:name=".SettingsActivity"
             android:exported="false" />
         <activity
@@ -27,10 +30,10 @@
             android:name=".RegistrationActivity"
             android:exported="false" />
         <activity
-            android:name=".VocabularyLearningActivity"
+            android:name=".TriviaActivity"
             android:exported="false" />
         <activity
-            android:name=".TriviaActivity"
+            android:name=".DictActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
